[tool.poetry]
name = "high-order-spectra-analysis"
version = "0.1.0"
description = "Package for high order spectra analysis using python"
authors = ["Matheus Anjos <matheusvra@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "high_order_spectra_analysis"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
scipy = "^1.9.3"
matplotlib = "^3.6.2"
progressbar2 = "^4.2.0"
plotly = "^5.11.0"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
