[tool.poetry]
name = "high-order-spectra-analysis"
version = "0.1.0"
description = "Package for high order spectra analysis using python"
authors = ["Matheus Anjos <matheusvra@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "high_order_spectra_analysis"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.5"
progressbar2 = "^4.2.0"
pathos = "^0.3.0"
debugpy = "^1.6.4"
cython = "^0.29.33"


[build-system]
requires = ["poetry-core", "cython"]
build-backend = "poetry.core.masonry.api"
